// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden Replay Behavioural Equivalence > script "S1-far-5s-pristine" produces a stable trajectory 1`] = `
{
  "oldOnly": false,
  "projection": {
    "endedNaturally": true,
    "onCompletePayload": {
      "left": {
        "bestNotation": "20/30",
        "eye": "left",
      },
      "right": {
        "bestNotation": "20/40",
        "eye": "right",
      },
    },
    "steps": [
      {
        "currentEye": "right",
        "eyePhase": "eye_intro",
        "kind": "ready_eye",
        "lineIndex": -1,
        "stepIndex": -1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 0,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 2,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 3,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 4,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 5,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 6,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 7,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 8,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 9,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 10,
      },
      {
        "currentEye": "left",
        "eyePhase": "eye_intro",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 11,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 12,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 13,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 14,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 15,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 16,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 17,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 18,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 19,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 20,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 21,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 22,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 23,
      },
    ],
    "testKind": "far",
    "timerDuration": 5,
  },
  "scriptName": "S1-far-5s-pristine",
}
`;

exports[`Golden Replay Behavioural Equivalence > script "S1-near-3s-pristine" produces a stable trajectory 1`] = `
{
  "oldOnly": false,
  "projection": {
    "endedNaturally": true,
    "onCompletePayload": {
      "left": {
        "bestNotation": null,
        "eye": "left",
      },
      "right": {
        "bestNotation": "20/50",
        "eye": "right",
      },
    },
    "steps": [
      {
        "currentEye": "right",
        "eyePhase": "eye_intro",
        "kind": "ready_eye",
        "lineIndex": -1,
        "stepIndex": -1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 0,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 2,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 3,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 4,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 5,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 6,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 7,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 8,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 9,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 10,
      },
      {
        "currentEye": "left",
        "eyePhase": "eye_intro",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 11,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 12,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 13,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 14,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 15,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 16,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 17,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 18,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 19,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 20,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 21,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 22,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 23,
      },
    ],
    "testKind": "near",
    "timerDuration": 3,
  },
  "scriptName": "S1-near-3s-pristine",
}
`;

exports[`Golden Replay Behavioural Equivalence > script "S2-pause-resume-far-5s" produces a stable trajectory (OLD-only — Task 3.13 will skip) 1`] = `
{
  "oldOnly": true,
  "projection": {
    "endedNaturally": true,
    "onCompletePayload": {
      "left": {
        "bestNotation": "20/20",
        "eye": "left",
      },
      "right": {
        "bestNotation": "20/30",
        "eye": "right",
      },
    },
    "steps": [
      {
        "currentEye": "right",
        "eyePhase": "eye_intro",
        "kind": "ready_eye",
        "lineIndex": -1,
        "stepIndex": -1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 0,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "pause",
        "lineIndex": 1,
        "stepIndex": 2,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 3,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "resume",
        "lineIndex": 2,
        "stepIndex": 4,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 5,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 6,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 7,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 8,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 9,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 10,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 11,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 12,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 13,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 14,
      },
      {
        "currentEye": "left",
        "eyePhase": "eye_intro",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 15,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 16,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 17,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 18,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 19,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 20,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 21,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 22,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 23,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 24,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 25,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 26,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 27,
      },
    ],
    "testKind": "far",
    "timerDuration": 5,
  },
  "scriptName": "S2-pause-resume-far-5s",
}
`;

exports[`Golden Replay Behavioural Equivalence > script "S2-pause-resume-far-5s" produces a stable trajectory (post-fix) 1`] = `
{
  "oldOnly": true,
  "projection": {
    "endedNaturally": true,
    "onCompletePayload": {
      "left": {
        "bestNotation": "20/20",
        "eye": "left",
      },
      "right": {
        "bestNotation": "20/30",
        "eye": "right",
      },
    },
    "steps": [
      {
        "currentEye": "right",
        "eyePhase": "eye_intro",
        "kind": "ready_eye",
        "lineIndex": -1,
        "stepIndex": -1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 0,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "pause",
        "lineIndex": 1,
        "stepIndex": 2,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 3,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "resume",
        "lineIndex": 1,
        "stepIndex": 4,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 5,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 6,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 7,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 8,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 9,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 10,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 11,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 12,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 13,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 14,
      },
      {
        "currentEye": "left",
        "eyePhase": "eye_intro",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 15,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 16,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 17,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 18,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 19,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 20,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 21,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 22,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 23,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 24,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 25,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 26,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 27,
      },
    ],
    "testKind": "far",
    "timerDuration": 5,
  },
  "scriptName": "S2-pause-resume-far-5s (post-fix)",
}
`;

exports[`Golden Replay Behavioural Equivalence > script "S5-null-null-far-5s" produces a stable trajectory 1`] = `
{
  "oldOnly": false,
  "projection": {
    "endedNaturally": true,
    "onCompletePayload": {
      "left": {
        "bestNotation": null,
        "eye": "left",
      },
      "right": {
        "bestNotation": null,
        "eye": "right",
      },
    },
    "steps": [
      {
        "currentEye": "right",
        "eyePhase": "eye_intro",
        "kind": "ready_eye",
        "lineIndex": -1,
        "stepIndex": -1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 0,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 2,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 3,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 4,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 5,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 6,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 7,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 8,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 9,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 10,
      },
      {
        "currentEye": "left",
        "eyePhase": "eye_intro",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 11,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 12,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 13,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 14,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 15,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 16,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 17,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 18,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 19,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 20,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 21,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 22,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 23,
      },
    ],
    "testKind": "far",
    "timerDuration": 5,
  },
  "scriptName": "S5-null-null-far-5s",
}
`;

exports[`Golden Replay Behavioural Equivalence > script "S6-top-far-5s" produces a stable trajectory 1`] = `
{
  "oldOnly": false,
  "projection": {
    "endedNaturally": true,
    "onCompletePayload": {
      "left": {
        "bestNotation": "20/200",
        "eye": "left",
      },
      "right": {
        "bestNotation": "20/200",
        "eye": "right",
      },
    },
    "steps": [
      {
        "currentEye": "right",
        "eyePhase": "eye_intro",
        "kind": "ready_eye",
        "lineIndex": -1,
        "stepIndex": -1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 0,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 2,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 3,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 4,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 5,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 6,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 7,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 8,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 9,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 10,
      },
      {
        "currentEye": "left",
        "eyePhase": "eye_intro",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 11,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 12,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 13,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 14,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 15,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 16,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 17,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 18,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 19,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 20,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 21,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 22,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 23,
      },
    ],
    "testKind": "far",
    "timerDuration": 5,
  },
  "scriptName": "S6-top-far-5s",
}
`;

exports[`Golden Replay Behavioural Equivalence > script "S7-bottom-far-5s" produces a stable trajectory 1`] = `
{
  "oldOnly": false,
  "projection": {
    "endedNaturally": true,
    "onCompletePayload": {
      "left": {
        "bestNotation": "20/15",
        "eye": "left",
      },
      "right": {
        "bestNotation": "20/15",
        "eye": "right",
      },
    },
    "steps": [
      {
        "currentEye": "right",
        "eyePhase": "eye_intro",
        "kind": "ready_eye",
        "lineIndex": -1,
        "stepIndex": -1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 0,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 1,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 2,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 3,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 4,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 5,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 6,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 7,
      },
      {
        "currentEye": "right",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 8,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 9,
      },
      {
        "currentEye": "right",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 10,
      },
      {
        "currentEye": "left",
        "eyePhase": "eye_intro",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 11,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "ready_eye",
        "lineIndex": 0,
        "stepIndex": 12,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 1,
        "stepIndex": 13,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 2,
        "stepIndex": 14,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 3,
        "stepIndex": 15,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 4,
        "stepIndex": 16,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 5,
        "stepIndex": 17,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 6,
        "stepIndex": 18,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 7,
        "stepIndex": 19,
      },
      {
        "currentEye": "left",
        "eyePhase": "reading",
        "kind": "tick",
        "lineIndex": 8,
        "stepIndex": 20,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 21,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "tick",
        "lineIndex": -1,
        "stepIndex": 22,
      },
      {
        "currentEye": "left",
        "eyePhase": "self_report",
        "kind": "select_notation",
        "lineIndex": -1,
        "stepIndex": 23,
      },
    ],
    "testKind": "far",
    "timerDuration": 5,
  },
  "scriptName": "S7-bottom-far-5s",
}
`;

exports[`Golden Replay Behavioural Equivalence > script catalogue export is stable 1`] = `
[
  {
    "name": "S1-far-5s-pristine",
    "oldOnly": false,
    "testKind": "far",
    "timerDuration": 5,
  },
  {
    "name": "S1-near-3s-pristine",
    "oldOnly": false,
    "testKind": "near",
    "timerDuration": 3,
  },
  {
    "name": "S2-pause-resume-far-5s",
    "oldOnly": true,
    "testKind": "far",
    "timerDuration": 5,
  },
  {
    "name": "S5-null-null-far-5s",
    "oldOnly": false,
    "testKind": "far",
    "timerDuration": 5,
  },
  {
    "name": "S6-top-far-5s",
    "oldOnly": false,
    "testKind": "far",
    "timerDuration": 5,
  },
  {
    "name": "S7-bottom-far-5s",
    "oldOnly": false,
    "testKind": "far",
    "timerDuration": 5,
  },
]
`;
